feat: Implementação da rota de delete padronizada de acordo com a collection
